src/test/deca/codegen/valid/avecObjet/class_selection_this.deca
// Description :
//    Test unitaire : this
//
// Resultats :
//

class A {
    int x;

    void f() {
        this.x = 3;
        println(this.x);
    }
}
 {
    
 }