src/test/deca/codegen/invalid/sansObjet/float_div_zero.deca
// Description :
//    Division par 0 float
//
// Resultats :
//    Erreur : division par 0.0

{
    float x = 3.14;
    float y = 0.0;
    print(x / y);
}